; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/ivtv/extr_ivtv-cards.c_ivtv_get_card.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/ivtv/extr_ivtv-cards.c_ivtv_get_card.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ivtv_card = type { i32 }

@ivtv_card_list = common dso_local global %struct.ivtv_card** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ivtv_card* @ivtv_get_card(i64 %0) #0 {
  %2 = alloca %struct.ivtv_card*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load %struct.ivtv_card**, %struct.ivtv_card*** @ivtv_card_list, align 8
  %6 = call i64 @ARRAY_SIZE(%struct.ivtv_card** %5)
  %7 = icmp uge i64 %4, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.ivtv_card* null, %struct.ivtv_card** %2, align 8
  br label %14

9:                                                ; preds = %1
  %10 = load %struct.ivtv_card**, %struct.ivtv_card*** @ivtv_card_list, align 8
  %11 = load i64, i64* %3, align 8
  %12 = getelementptr inbounds %struct.ivtv_card*, %struct.ivtv_card** %10, i64 %11
  %13 = load %struct.ivtv_card*, %struct.ivtv_card** %12, align 8
  store %struct.ivtv_card* %13, %struct.ivtv_card** %2, align 8
  br label %14

14:                                               ; preds = %9, %8
  %15 = load %struct.ivtv_card*, %struct.ivtv_card** %2, align 8
  ret %struct.ivtv_card* %15
}

declare dso_local i64 @ARRAY_SIZE(%struct.ivtv_card**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
